I hope we finished

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/PortGame.loader.js";
+      var loaderUrl = buildUrl + "/Fragment_Of_Kurt.loader.js";
       var config = {
-        dataUrl: buildUrl + "/PortGame.data",
-        frameworkUrl: buildUrl + "/PortGame.framework.js",
-        codeUrl: buildUrl + "/PortGame.wasm",
+        dataUrl: buildUrl + "/Fragment_Of_Kurt.data",
+        frameworkUrl: buildUrl + "/Fragment_Of_Kurt.framework.js",
+        codeUrl: buildUrl + "/Fragment_Of_Kurt.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Fragments of Kurt",
